--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -20,494 +20,58 @@
 	background: #777;
 }
 
-.char {
-	display: inline-block;
-	animation-delay: calc(0.25s + var(--char-index) * 0.1s);
-	transition: all 0.25s calc(0.25s + var(--char-index) * 0.1s);
-	font-family: 'Lato';
-}
-.text--enter .char {
-	opacity: 0;
-	transform: translate(0, -150%);
-}
-.text--enter .char {
-	opacity: 1;
-	transform: translate(0, 0);
-}
-.text--random .char:nth-of-type(1) {
-	transform: translateX(214%) translateY(-231%);
-}
-.text--random .char:nth-of-type(2) {
-	transform: translateX(-125%) translateY(-81%);
-}
-.text--random .char:nth-of-type(3) {
-	transform: translateX(202%) translateY(80%);
-}
-.text--random .char:nth-of-type(4) {
-	transform: translateX(158%) translateY(88%);
-}
-.text--random .char:nth-of-type(5) {
-	transform: translateX(242%) translateY(-117%);
-}
-.text--random .char:nth-of-type(6) {
-	transform: translateX(-243%) translateY(-39%);
-}
-.text--swapsies .char:nth-of-type(odd),
-.text--swapsies .char:nth-of-type(odd) {
-	transform: translateX(100%);
-}
-.text--swapsies .char:nth-of-type(even),
-.text--swapsies .char:nth-of-type(even) {
-	transform: translateX(-100%);
-}
-.text--swapsies .char {
-	animation-duration: 0.5s;
-	animation-fill-mode: forwards;
-}
-.text--swapsies .char:nth-of-type(odd) {
-	animation-name: swap-left;
-}
-.text--swapsies .char:nth-of-type(even) {
-	animation-name: swap-right;
-}
-@-moz-keyframes swap-right {
-	25% {
-		transform: translateX(-100%) translateY(-100%);
-	}
-	75% {
-		transform: translateX(0) translateY(-100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-@-webkit-keyframes swap-right {
-	25% {
-		transform: translateX(-100%) translateY(-100%);
-	}
-	75% {
-		transform: translateX(0) translateY(-100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-@-o-keyframes swap-right {
-	25% {
-		transform: translateX(-100%) translateY(-100%);
-	}
-	75% {
-		transform: translateX(0) translateY(-100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-@keyframes swap-right {
-	25% {
-		transform: translateX(-100%) translateY(-100%);
-	}
-	75% {
-		transform: translateX(0) translateY(-100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-@-moz-keyframes swap-left {
-	25% {
-		transform: translateX(100%) translateY(100%);
-	}
-	75% {
-		transform: translateX(0) translateY(100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-@-webkit-keyframes swap-left {
-	25% {
-		transform: translateX(100%) translateY(100%);
-	}
-	75% {
-		transform: translateX(0) translateY(100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-@-o-keyframes swap-left {
-	25% {
-		transform: translateX(100%) translateY(100%);
-	}
-	75% {
-		transform: translateX(0) translateY(100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-@keyframes swap-left {
-	25% {
-		transform: translateX(100%) translateY(100%);
-	}
-	75% {
-		transform: translateX(0) translateY(100%);
-	}
-	100% {
-		transform: translateX(0) translateY(0);
-	}
-}
-.text--fading .char {
-	opacity: 0;
-}
-.text--flipping .char {
-	transform: rotateY(180deg);
-}
-.text--slide .char {
-	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
-}
-.text--slide .char {
-	opacity: 0;
-	transform: translate(-300%, 0) skewX(20deg);
-}
-.text--karaoke .char {
-	color: rgba(255, 255, 255, 0.15);
-	transition-duration: 0.1s;
-}
-.text--karaoke .char:after {
-	color: #fff;
-	visibility: visible;
-}
-.text--karaoke .char:after {
-	clip-path: inset(0 0 0 0);
-}
-.text--karaoke .char:after {
-	clip-path: inset(0 100% 0 0);
-}
-.text--filling .char {
-	color: rgba(255, 255, 255, 0.15);
-}
-.text--filling .char:after {
-	color: #fff;
-	visibility: visible;
-}
-.text--filling .char:after {
-	clip-path: inset(0 0 0 0);
-}
-.text--filling .char:after {
-	clip-path: inset(100% 0 0 0);
-}
-.text--blocks .char {
-	visibility: hidden;
-}
-.text--blocks {
-	overflow: hidden;
-	position: relative;
-}
-.text--blocks .char {
-	transition-delay: 0.5s;
-}
-.text--blocks :after {
-	content: '';
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background: #fff;
-	animation: block 0.5s 0.25s both;
-}
-@-moz-keyframes block {
-	0% {
-		transform: translate(-110%, 0);
-	}
-	45%,
-	55% {
-		transform: translate(0, 0);
-	}
-	100% {
-		transform: translate(110%, 0);
-	}
-}
-@-webkit-keyframes block {
-	0% {
-		transform: translate(-110%, 0);
-	}
-	45%,
-	55% {
-		transform: translate(0, 0);
-	}
-	100% {
-		transform: translate(110%, 0);
-	}
-}
-@-o-keyframes block {
-	0% {
-		transform: translate(-110%, 0);
-	}
-	45%,
-	55% {
-		transform: translate(0, 0);
-	}
-	100% {
-		transform: translate(110%, 0);
-	}
-}
-@keyframes block {
-	0% {
-		transform: translate(-110%, 0);
-	}
-	45%,
-	55% {
-		transform: translate(0, 0);
-	}
-	100% {
-		transform: translate(110%, 0);
-	}
-}
-.text--scaling .char {
-	transform: scale(0);
-}
-.text--turning .char {
-	transform: rotateY(90deg);
-}
 .text--folding .char {
+	opacity: 0;
+	transform: translateY(100%);
+	animation: foldIn 0.6s forwards;
+	animation-delay: calc(0.05s * var(--char-index));
+}
+
+@keyframes foldIn {
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+.text--bubbling .char {
+	opacity: 0;
+	transform: scale(0.3);
+	animation: bubbleIn 0.5s ease-out forwards;
+	animation-delay: calc(0.05s * var(--char-index));
+}
+
+@keyframes bubbleIn {
+	to {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+
+.text--rolling .char {
+	opacity: 0;
 	transform: rotateX(90deg);
-	transform-origin: bottom;
+	animation: rollIn 0.5s ease-out forwards;
+	animation-delay: calc(0.05s * var(--char-index));
 }
-.text--bulge .char {
-	animation-name: bulge;
-	animation-duration: 0.25s;
-}
-@-moz-keyframes bulge {
-	50% {
-		transform: scale(1.5);
+
+@keyframes rollIn {
+	to {
+		opacity: 1;
+		transform: rotateX(0deg);
 	}
 }
-@-webkit-keyframes bulge {
-	50% {
-		transform: scale(1.5);
-	}
-}
-@-o-keyframes bulge {
-	50% {
-		transform: scale(1.5);
-	}
-}
-@keyframes bulge {
-	50% {
-		transform: scale(1.5);
-	}
-}
-.text--perspective {
-	perspective: 1000px;
-}
-.text--perspective .char {
-	transition: transform 0.25s calc(0.25s + var(--char-index) * 0.1s), opacity 0.05s calc(0.25s + var(--char-index) * 0.1s);
-}
-.text--perspective .char {
-	opacity: 0;
-	transform: translate3d(-25px, -20px, -800px);
-}
-.text--zipping .char {
-	transition: transform 0.25s calc(0.25s + var(--char-index) * 0.1s), opacity 0.05s calc(0.25s + var(--char-index) * 0.1s);
-}
-.text--zipping .char {
-	opacity: 0;
-}
-.text--zipping .char:nth-of-type(odd) {
-	transform: translate(0, -100%);
-}
-.text--zipping .char:nth-of-type(even) {
-	transform: translate(0, 100%);
-}
-.text--spinning .char {
-	transform: rotateY(-360deg);
-}
-.text--tumbling .char {
-	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
-}
-.text--tumbling .char {
-	opacity: 0;
-	transform: translate(-300%, -50%) rotate(1080deg) scale(0);
-}
-.text--bubbling .char {
-	transition-timing-function: cubic-bezier(0.75, -2, 0.75, 2);
-}
-.text--bubbling .char:nth-of-type(1) {
-	transition-delay: 0.4s;
-}
-.text--bubbling .char:nth-of-type(2) {
-	transition-delay: 0.4s;
-}
-.text--bubbling .char:nth-of-type(3) {
-	transition-delay: 0.5s;
-}
-.text--bubbling .char:nth-of-type(4) {
-	transition-delay: 0.3s;
-}
-.text--bubbling .char:nth-of-type(5) {
-	transition-delay: 0.6s;
-}
-.text--bubbling .char:nth-of-type(6) {
-	transition-delay: 0.3s;
-}
-.text--bubbling .char:nth-of-type(7) {
-	transition-delay: 0.4s;
-}
-.text--bubbling .char:nth-of-type(8) {
-	transition-delay: 0.5s;
-}
-.text--bubbling .char {
-	transform: scale(0.5);
-}
-.text--swinging .char {
-	transform-origin: calc((var(--char-total) - var(--char-index)) * 100%) -100%;
-	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
-}
+
 .text--swinging .char {
 	opacity: 0;
-	transform: rotate(90deg);
+	transform: rotateZ(-90deg);
+	animation: swingIn 0.5s ease-out forwards;
+	animation-delay: calc(0.05s * var(--char-index));
 }
-.text--rolling .char {
-	transition: transform 1s, opacity 0.2s;
-	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
-}
-.text--rolling .char {
-	opacity: 0;
-	transform: translate(-500%, 0) scale(0) rotate(-1440deg);
-}
-.text--blowing .char {
-	animation-duration: 1s;
-	animation-fill-mode: both;
-	transform-origin: left bottom;
-	animation-delay: calc(var(--char-index) * 0.025s);
-}
-.text--blowing .char {
-	animation-name: blowing;
-}
-@-moz-keyframes blowing {
-	50%,
-	60%,
-	70% {
-		transform: skewX(-35deg);
-	}
-	55%,
-	65%,
-	75% {
-		transform: skewX(-40deg);
-	}
-}
-@-webkit-keyframes blowing {
-	50%,
-	60%,
-	70% {
-		transform: skewX(-35deg);
-	}
-	55%,
-	65%,
-	75% {
-		transform: skewX(-40deg);
-	}
-}
-@-o-keyframes blowing {
-	50%,
-	60%,
-	70% {
-		transform: skewX(-35deg);
-	}
-	55%,
-	65%,
-	75% {
-		transform: skewX(-40deg);
-	}
-}
-@keyframes blowing {
-	50%,
-	60%,
-	70% {
-		transform: skewX(-35deg);
-	}
-	55%,
-	65%,
-	75% {
-		transform: skewX(-40deg);
-	}
-}
-.text--meeting .char {
-	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
-}
-.text--meeting .char:nth-of-type(even) {
-	transform-origin: top right;
-}
-.text--meeting .char:nth-of-type(odd) {
-	transform-origin: bottom left;
-}
-.text--meeting .char {
-	transform: rotate(180deg);
-}
-.text--conveyor .char {
-	transform-origin: left bottom;
-	animation: convey 1s both linear;
-	animation-delay: calc((var(--char-total) - var(--char-index)) * 0.15s);
-	transition: none;
-}
-@-moz-keyframes convey {
-	0% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(calc((var(--char-total) - var(--char-index)) * -100%), 0);
-	}
-	40% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(0, 0);
-	}
-	50% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(0deg) translate(0, 0);
-	}
-	100% {
-		transform: translate(0, 0) rotate(0deg) translate(0, 0);
-	}
-}
-@-webkit-keyframes convey {
-	0% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(calc((var(--char-total) - var(--char-index)) * -100%), 0);
-	}
-	40% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(0, 0);
-	}
-	50% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(0deg) translate(0, 0);
-	}
-	100% {
-		transform: translate(0, 0) rotate(0deg) translate(0, 0);
-	}
-}
-@-o-keyframes convey {
-	0% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(calc((var(--char-total) - var(--char-index)) * -100%), 0);
-	}
-	40% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(0, 0);
-	}
-	50% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(0deg) translate(0, 0);
-	}
-	100% {
-		transform: translate(0, 0) rotate(0deg) translate(0, 0);
-	}
-}
-@keyframes convey {
-	0% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(calc((var(--char-total) - var(--char-index)) * -100%), 0);
-	}
-	40% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(-180deg) translate(0, 0);
-	}
-	50% {
-		transform: translate(calc((var(--char-total) - (var(--char-total) - var(--char-index))) * -100%), 0) rotate(0deg) translate(0, 0);
-	}
-	100% {
-		transform: translate(0, 0) rotate(0deg) translate(0, 0);
+
+@keyframes swingIn {
+	to {
+		opacity: 1;
+		transform: rotateZ(0deg);
 	}
 }
